WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123485
WebKit/win/WebKitGraphics.h:void WebDrawText(WebTextRenderInfo*); is never called
https://bugs.webkit.org/show_bug.cgi?id=123485
Summary
WebKit/win/WebKitGraphics.h:void WebDrawText(WebTextRenderInfo*); is never ca...
Myles C. Maxfield
Reported
2013-10-29 17:29:50 PDT
We should remove dead code
Attachments
Patch
(5.56 KB, patch)
2013-10-30 11:53 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(6.16 KB, patch)
2013-10-30 11:57 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(6.88 KB, patch)
2013-10-30 12:06 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(6.88 KB, patch)
2013-10-30 12:07 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(6.93 KB, patch)
2013-10-30 12:37 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-10-29 17:30:37 PDT
<
rdar://problem/15347544
>
Brent Fulgham
Comment 2
2013-10-29 17:31:12 PDT
It doesn't look like we use WebDrawText anymore, and the one client program that had been using it no longer needs it. This bug removes the unused code as well as the exported symbol.
Myles C. Maxfield
Comment 3
2013-10-30 11:53:32 PDT
Created
attachment 215544
[details]
Patch
Brent Fulgham
Comment 4
2013-10-30 11:55:51 PDT
Comment on
attachment 215544
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=215544&action=review
Looks good, but you also need to tell Visual Studio to NOT look for the removed symbol when building the DLL.
> Source/WebKit/win/WebKitGraphics.h:-66 > -void WebDrawText(WebTextRenderInfo*);
This also needs to be removed from WebKitExports.def.in
Myles C. Maxfield
Comment 5
2013-10-30 11:57:40 PDT
Created
attachment 215545
[details]
Patch
Brent Fulgham
Comment 6
2013-10-30 12:02:58 PDT
Comment on
attachment 215545
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=215545&action=review
Sorry -- I missed one thing, and we need a ChangeLog on the "WebKitExports.def.in" change.
> Source/WebKit/win/ChangeLog:8 > + * WebKitGraphics.cpp:
You should say something like "Removed unused WebDrawText implementation."
> Source/WebKit/WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in:-14 > - WebDrawText
Unfortunately, this file is in the scope of "Source/WebKit/ChangeLog" (not just the "Source/WebKit/win/ChangeLog"), so yet ANOTHER ChangeLog is needed. "prepare-ChangeLog" should get it set up properly for you.
Myles C. Maxfield
Comment 7
2013-10-30 12:06:19 PDT
Created
attachment 215546
[details]
Patch
Myles C. Maxfield
Comment 8
2013-10-30 12:07:50 PDT
Created
attachment 215547
[details]
Patch
Brent Fulgham
Comment 9
2013-10-30 12:11:14 PDT
Comment on
attachment 215547
[details]
Patch r=me.
WebKit Commit Bot
Comment 10
2013-10-30 12:13:40 PDT
Comment on
attachment 215547
[details]
Patch Rejecting
attachment 215547
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 215547, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output:
http://webkit-queues.appspot.com/results/17038284
Myles C. Maxfield
Comment 11
2013-10-30 12:37:09 PDT
Created
attachment 215550
[details]
Patch
Brent Fulgham
Comment 12
2013-10-30 12:46:00 PDT
Comment on
attachment 215550
[details]
Patch Try again! r=me
WebKit Commit Bot
Comment 13
2013-10-30 13:30:42 PDT
Comment on
attachment 215550
[details]
Patch Clearing flags on attachment: 215550 Committed
r158309
: <
http://trac.webkit.org/changeset/158309
>
WebKit Commit Bot
Comment 14
2013-10-30 13:30:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug