WebKit/win/WebKitGraphics.h:void WebDrawText(WebTextRenderInfo*); is never called https://bugs.webkit.org/show_bug.cgi?id=123485

Patch by Myles C. Maxfield <mmaxfield@apple.com> on 2013-10-30
Reviewed by Brent Fulgham.

Source/WebCore:

WebDrawText is the only caller of WebCoreDrawTextAtPoint, so we can
delete that as well.

Because there is no behavior difference, no new tests are necessary.

* platform/win/WebCoreTextRenderer.cpp:
* platform/win/WebCoreTextRenderer.h:

Source/WebKit:

Deleting the function

* WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in:

Source/WebKit/win:

Removed unused WebDrawText implementation.

* WebKitGraphics.cpp:
* WebKitGraphics.h:

Canonical link: https://commits.webkit.org/141677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158309 268f45cc-cd09-0410-ab3c-d52691b4dbfc